# pycpp_build

./: .gitignore  CMakeLists.txt  README  README.md  requirements.txt  setup.py
cmake/Modules/: FindPybind11.cmake
docs/: doxyfile.conf
setup/: __init__.py  build.py  configure.py  version.py
src/pycpp_build/: __init__.py  hello.py  main.py
src/pycpp_build/cpp/: CMakeLists.txt  bindings.cpp  math.hpp
src/pycpp_build/py/: hello.py
src/pycpp_build/scripts/: main.py
src/python_cpp_example/: __init__.py  bindings.cpp  math.hpp
tests/: binaries_test.py  cpp_test.py  math_test.py  test_cpp.py  test_math.cpp
tests/cpp/: CMakeLists.txt
